--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,15 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <title>New project</title>
-  <link rel="preload" href="fonts/roboto-bold.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/roboto-medium.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/roboto-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-  <h1>New project</h1>
+  <div class="wrapper">
+    <header class="header">Хедер</header>
+    <main>Не хедер</main>
+    <footer class="footer">Футер</footer>
+  </div>
 </body>
+
 </html>
