--- a/source/index.html
+++ b/source/index.html
@@ -13,10 +13,12 @@
 
 <body>
   <div class="wrapper">
+
     <header class="header">
       <div class="header__container container">
         <nav class="header__main-nav main-nav">
           <ul class="main-nav__list">
+
             <li class="main-nav__item main-nav__item--logo">
               <a href="index.html" class="main-nav__logo">
                 <picture>
@@ -35,18 +37,19 @@
               </div>
             </li>
             <!-- /.main-nav__item -->
+
             <li class="main-nav__item main-nav__item--site-nav">
               <ul class="main-nav__link-list">
-                <li class="main-nav__link-item">
-                  <a href="#" class="main-nav__link main-nav__link--dropdown hover-line">
+                <li class="main-nav__link-item dropdown dropdown--mobile">
+                  <a href="#" class="main-nav__link main-nav__link--dropdown hover-line dropdown__btn">
                     <span class="main-nav__link-text">О журнале</span>
                     <svg width="7" height="4">
                       <use xlink:href="img/sprite.svg#icon-dropdown"></use>
                     </svg>
                   </a>
-                  <ul class="main-nav__sub-list">
+                  <ul class="main-nav__sub-list dropdown__content">
                     <li class="main-nav__sub-item">
-                      <a class="main-nav__sub-link">
+                      <a href="#" class="main-nav__sub-link">
                         <span class="main-nav__link-text">О журнале</span>
                         <svg width="7" height="4">
                           <use xlink:href="img/sprite.svg#icon-dropdown"></use>
@@ -67,16 +70,16 @@
                 <li class="main-nav__link-item">
                   <a href="#" class="main-nav__link hover-line">Архив</a>
                 </li>
-                <li class="main-nav__link-item">
-                  <a href="#" class="main-nav__link main-nav__link--dropdown hover-line">
+                <li class="main-nav__link-item dropdown dropdown--mobile">
+                  <a href="#" class="main-nav__link main-nav__link--dropdown hover-line dropdown__btn">
                     <span class="main-nav__link-text">Для авторов</span>
                     <svg width="7" height="4">
                       <use xlink:href="img/sprite.svg#icon-dropdown"></use>
                     </svg>
                   </a>
-                  <ul class="main-nav__sub-list">
+                  <ul class="main-nav__sub-list dropdown__content">
                     <li class="main-nav__sub-item">
-                      <a class="main-nav__sub-link">
+                      <a href="#" class="main-nav__sub-link">
                         <span class="main-nav__link-text">Для авторов</span>
                         <svg width="7" height="4">
                           <use xlink:href="img/sprite.svg#icon-dropdown"></use>
@@ -98,8 +101,15 @@
                   <a href="#" class="main-nav__link hover-line">Контакты</a>
                 </li>
               </ul>
+              <button class="main-nav__close-menu btn-reset">
+                <svg width="25" height="24">
+                  <use xlink:href="img/sprite.svg#icon-close"></use>
+                </svg>
+                <span class="visually-hidden">Закрыть меню</span>
+              </button>
             </li>
             <!-- /.main-nav__item -->
+
             <li class="main-nav__item main-nav__item--inputs">
               <div class="main-nav__change-lang">
                 <div class="main-nav__input-box">
@@ -111,26 +121,70 @@
                   <label class="main-nav__radio-label" for="lang-eng">eng</label>
                 </div>
               </div>
-              <button class="main-nav__search-btn btn-reset hover-line">
+              <button class="main-nav__search-btn btn-reset hover-line" data-modal="search">
                 <svg width="17" height="17">
                   <use xlink:href="img/sprite.svg#icon-search"></use>
                 </svg>
                 <span>Поиск</span>
               </button>
-              <div class="main-nav__input-search">
-                <input type="text" name="main-search" id="main-search" placeholder="Введите слово или фразу">
-                <label class="visually-hidden" for="main-search">Поиск по сайту</label>
+
+              <div class="modal modal--search">
+                <div class="modal__overlay"></div>
+                <div class="main-nav__input-search">
+                  <input type="text" name="main-search" id="main-search" placeholder="Введите слово или фразу">
+                  <label class="visually-hidden" for="main-search">Поиск по сайту</label>
+                </div>
               </div>
+              <!-- /.modal modal--search -->
+
             </li>
             <!-- /.main-nav__item -->
+
             <li class="main-nav__item main-nav__item--user-nav">
               <div class="main-nav__link-container">
-                <a href="#" class="main-nav__link">
+                <a href="#" class="main-nav__link" data-modal="login">
                   <svg width="17" height="17">
                     <use xlink:href="img/sprite.svg#icon-lk"></use>
                   </svg>
                   <span>Личный кабинет</span>
                 </a>
+
+                <div class="modal modal--login">
+                  <div class="modal__overlay"></div>
+                  <div class="main-nav__login login">
+                    <div class="login__title">
+                      <svg width="17" height="17">
+                        <use xlink:href="img/sprite.svg#icon-lk"></use>
+                      </svg>
+                      <span>Личный кабинет</span>
+                    </div>
+                    <form class="login__form" action="#" method="post">
+                      <div class="login__input-box">
+                        <input type="text" name="login-name" id="login-name" placeholder="Логин">
+                        <label class="visually-hidden" for="login-name">Введите логин</label>
+                      </div>
+                      <div class="login__input-box">
+                        <input type="password" name="login-password" id="login-password" placeholder="Пароль">
+                        <label class="visually-hidden" for="login-password">Введите пароль</label>
+                      </div>
+                      <div class="login__btn-group">
+                        <a href="#" class="login__btn btn btn--underline btn-reset">
+                          <span>Напомнить</span>
+                        </a>
+                        <button class="login__btn btn btn--white btn-reset" type="submit">Войти</button>
+                      </div>
+                    </form>
+                    <a href="#" class="login__btn-reg btn btn--underline btn-reset">
+                      <span>Регистрация</span>
+                      <svg width="30" height="8">
+                        <use xlink:href="img/sprite.svg#icon-arrow-right-long"></use>
+                      </svg>
+                    </a>
+                  </div>
+
+                </div>
+                <!-- /.modal modal--login -->
+
               </div>
               <div class="main-nav__link-container">
                 <a href="#" class="main-nav__link">
@@ -142,6 +196,14 @@
               </div>
             </li>
             <!-- /.main-nav__item -->
+
+            <button class="main-nav__burger">
+              <svg width="32" height="21">
+                <use xlink:href="img/sprite.svg#icon-burger"></use>
+              </svg>
+              <span class="visually-hidden">Открыть меню</span>
+            </button>
+
           </ul>
         </nav>
       </div>
