--- a/source/index.html
+++ b/source/index.html
@@ -148,43 +148,6 @@
                   </svg>
                   <span>Личный кабинет</span>
                 </a>
-
-                <div class="modal modal--login">
-                  <div class="modal__overlay"></div>
-                  <div class="main-nav__login login">
-                    <div class="login__title">
-                      <svg width="17" height="17">
-                        <use xlink:href="img/sprite.svg#icon-lk"></use>
-                      </svg>
-                      <span>Личный кабинет</span>
-                    </div>
-                    <form class="login__form" action="#" method="post">
-                      <div class="login__input-box">
-                        <input type="text" name="login-name" id="login-name" placeholder="Логин">
-                        <label class="visually-hidden" for="login-name">Введите логин</label>
-                      </div>
-                      <div class="login__input-box">
-                        <input type="password" name="login-password" id="login-password" placeholder="Пароль">
-                        <label class="visually-hidden" for="login-password">Введите пароль</label>
-                      </div>
-                      <div class="login__btn-group">
-                        <a href="#" class="login__btn btn btn--underline btn-reset">
-                          <span>Напомнить</span>
-                        </a>
-                        <button class="login__btn btn btn--white btn-reset" type="submit">Войти</button>
-                      </div>
-                    </form>
-                    <a href="#" class="login__btn-reg btn btn--underline btn-reset">
-                      <span>Регистрация</span>
-                      <svg width="30" height="8">
-                        <use xlink:href="img/sprite.svg#icon-arrow-right-long"></use>
-                      </svg>
-                    </a>
-                  </div>
-
-                </div>
-                <!-- /.modal modal--login -->
-
               </div>
               <div class="main-nav__link-container">
                 <a href="#" class="main-nav__link">
@@ -209,9 +172,114 @@
       </div>
     </header>
     <!-- /.header -->
+
     <main></main>
-    <footer class="footer"></footer>
+    <!-- main -->
+    <footer class="footer">
+      <div class="footer__container container">
+        <div class="footer__logo-container">
+          <a href="index.html" class="footer__logo">
+            <picture>
+              <source type="image/webp" srcset="
+                                          img/content/logo-georesursy.webp,
+                                          img/content/logo-georesursy@2x.webp 2x
+                            ">
+              <img src="img/content/logo-georesursy.png" srcset="img/content/logo-georesursy@2x.png 2x" width="69" height="61"
+                alt="Логотип Георесурсы">
+            </picture>
+          </a>
+          <div class="footer__text-container">
+            <h3 class="footer__title">Георесурсы</h3>
+            <p class="footer__text">ISSN 1608-5043 (Print)</p>
+            <p class="footer__text">ISSN 1608-5078 (Online)</p>
+          </div>
+        </div>
+        <div class="footer__nav">
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Редакционная коллегия</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Редакционная политика</a>
+            </li>
+            <li class="footer__nav-item footer__nav-item--lk">
+              <a href="#" class="footer__nav-link footer__nav-link--lk" data-modal="login">Личный кабинет</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Рецензирование</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Индексирование</a>
+            </li>
+            <li class="footer__nav-item footer__nav-item--archive">
+              <a href="#" class="footer__nav-link">Архив</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">О журнале</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#" class="footer__nav-link">Для авторов</a>
+            </li>
+            <li class="footer__nav-item footer__nav-item--contacts">
+              <a href="#" class="footer__nav-link">Контакты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__inputs">
+          <button class="footer__search-btn btn-reset" data-modal="search">
+            <svg width="20" height="20">
+              <use xlink:href="img/sprite.svg#icon-search-2"></use>
+            </svg>
+          </button>
+          <div class="footer__change-lang">
+            <div class="footer__input-box">
+              <input class="footer__radio-input visually-hidden" type="radio" name="lang-footer" id="lang-rus-footer" checked>
+              <label class="footer__radio-label" for="lang-rus-footer">rus</label>
+            </div>
+            <div class="footer__input-box">
+              <input class="footer__radio-input visually-hidden" type="radio" name="lang-footer" id="lang-eng-footer">
+              <label class="footer__radio-label" for="lang-eng-footer">eng</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- /.footer -->
+    <div class="modal modal--login">
+      <div class="modal__overlay"></div>
+      <div class="main-nav__login login">
+        <div class="login__title">
+          <svg width="17" height="17">
+            <use xlink:href="img/sprite.svg#icon-lk"></use>
+          </svg>
+          <span>Личный кабинет</span>
+        </div>
+        <form class="login__form" action="#" method="post">
+          <div class="login__input-box">
+            <input type="text" name="login-name" id="login-name" placeholder="Логин">
+            <label class="visually-hidden" for="login-name">Введите логин</label>
+          </div>
+          <div class="login__input-box">
+            <input type="password" name="login-password" id="login-password" placeholder="Пароль">
+            <label class="visually-hidden" for="login-password">Введите пароль</label>
+          </div>
+          <div class="login__btn-group">
+            <a href="#" class="login__btn btn btn--underline btn-reset">
+              <span>Напомнить</span>
+            </a>
+            <button class="login__btn btn btn--white btn-reset" type="submit">Войти</button>
+          </div>
+        </form>
+        <a href="#" class="login__btn-reg btn btn--underline btn-reset">
+          <span>Регистрация</span>
+          <svg width="30" height="8">
+            <use xlink:href="img/sprite.svg#icon-arrow-right-long"></use>
+          </svg>
+        </a>
+      </div>
+
+    </div>
+    <!-- /.modal modal--login -->
   </div>
   <script src="js/main.js"></script>
 </body>
