Добавляет блок articles с адаптивом

--- a/source/index.html
+++ b/source/index.html
@@ -180,8 +180,8 @@
           <section class="main-page__promo promo">
             <div class="promo__container container">
               <div class="promo__text-container">
-                <h2 class="promo__title"><span class="promo__title-lower">Научно-технический журнал</span>
-                  <br>Георесурсы</h2>
+                <p class="promo__title-sub">Научно-технический журнал</p>
+                <h2 class="promo__title title">Георесурсы</h2>
                 <p class="promo__text">
                   Журнал Георесурсы — рецензируемое ежеквартальное научно-техническое издание, отвечающее международным
                   стандартам. Журнал издается издается и издается. Рецензируемое ежеквартальное научно-техническое
@@ -374,6 +374,127 @@
 
           </section>
           <!-- /.main-page__promo promo -->
+
+          <section class="main-page__articles articles">
+            <div class="articles__container container">
+              <h2 class="articles__title title">Популярные статьи</h2>
+              <div class="articles__content">
+                <div class="articles__list-container">
+                  <ul class="articles__list">
+
+                    <li class="articles__item articles__item--main article article--main">
+                      <div class="article__image-container">
+                        <picture>
+                          <source type="image/webp" srcset="
+                                        img/content/article-preview-001.webp,
+                                        img/content/article-preview-001@2x.webp 2x
+                          ">
+                          <img src="img/content/article-preview-001.jpg" srcset="img/content/article-preview-001@2x.jpg 2x" width="561" height="321"
+                            alt="Превью статьи">
+                        </picture>
+                      </div>
+                      <div class="article__date-container">
+                        <p class="article__date">15<br><span>апр</span></p>
+                      </div>
+                      <h3 class="article__title">Российский Нефтегазохимический Форум и&nbsp;выставка «Газ. Нефть. Технологии»</h3>
+                      <p class="article__authors">А. Н. Ивойлов, К. Н. Кадеева, К. В. Константинопольский, Б. Р. Гуреев</p>
+                    </li>
+                    <!-- /.articles__item article -->
+
+                    <li class="articles__item article">
+                      <div class="article__image-container">
+                        <picture>
+                          <source type="image/webp" srcset="
+                                        img/content/article-preview-002.webp,
+                                        img/content/article-preview-002@2x.webp 2x
+                          ">
+                          <img src="img/content/article-preview-002.jpg" srcset="img/content/article-preview-002@2x.jpg 2x" width="561"
+                            height="321" alt="Превью статьи">
+                        </picture>
+                      </div>
+                      <div class="article__date-container">
+                        <p class="article__date">15<br><span>апр</span></p>
+                      </div>
+                      <h3 class="article__title">Российский Нефтегазохимический Форум и выставка «Газ. Нефть. Технологии»</h3>
+                    </li>
+                    <!-- /.articles__item article -->
+
+                    <li class="articles__item article">
+                      <div class="article__image-container">
+                        <picture>
+                          <source type="image/webp" srcset="
+                                        img/content/article-preview-003.webp,
+                                        img/content/article-preview-003@2x.webp 2x
+                          ">
+                          <img src="img/content/article-preview-003.jpg" srcset="img/content/article-preview-003@2x.jpg 2x" width="561"
+                            height="321" alt="Превью статьи">
+                        </picture>
+                      </div>
+                      <div class="article__date-container">
+                        <p class="article__date">15<br><span>апр</span></p>
+                      </div>
+                      <h3 class="article__title">Российский Нефтегазохимический Форум и выставка</h3>
+                    </li>
+                    <!-- /.articles__item article -->
+
+                  </ul>
+                  <a href="#" class="articles__btn btn btn--light btn-reset">
+                    <span>Все статьи</span>
+                  </a>
+                </div>
+                <!-- /.articles__list-container -->
+
+                <div class="articles__widget widget">
+                  <ul class="widget__logo-list">
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-open-access.svg" width="95" height="39" alt="Логотип Open Access">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-doaj.png" width="95" height="28" alt="Логотип DOAJ">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-wos.svg" width="109" height="23" alt="Логотип Clarivate - Web of Science">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-scopus.svg" width="78" height="25" alt="Логотип Scopus">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+                  </ul>
+                  <div class="widget__container">
+                    <a class="widget__georesursy"
+                      href="https://www.scimagojr.com/journalsearch.php?q=21100907383&amp;tip=sid&amp;exact=no"
+                      title="SCImago Journal &amp; Country Rank"><img border="0"
+                        src="https://www.scimagojr.com/journal_img.php?id=21100907383" alt="SCImago Journal &amp; Country Rank" />
+                    </a>
+                  </div>
+                  <a href="#" class="widget__btn btn btn--border btn--arrow btn--nowrap btn-reset">
+                    <span>Отправить рукопись</span>
+                    <svg width="17" height="8">
+                      <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
+                    </svg>
+                  </a>
+                </div>
+                <!-- /.promo__widget widget -->
+
+              </div>
+            </div>
+          </section>
+          <!-- /.main-page__articles articles -->
 
         </div>
       </div>
