Добавляет секцию about без адаптива

--- a/source/index.html
+++ b/source/index.html
@@ -260,8 +260,9 @@
                                           img/content/magazine-preview-002.webp,
                                           img/content/magazine-preview-002@2x.webp 2x
                             ">
-                            <img src="img/content/magazine-preview-002.jpg" srcset="img/content/magazine-preview-002@2x.jpg 2x" width="287"
-                              height="403" alt="Обложка журнала Георесурсы Т 21. №1. 2021">
+                            <img src="img/content/magazine-preview-002.jpg"
+                              srcset="img/content/magazine-preview-002@2x.jpg 2x" width="287" height="403"
+                              alt="Обложка журнала Георесурсы Т 21. №1. 2021">
                           </picture>
                         </div>
                         <p class="slide__text slide__text--release">Т 21. №1. 2021</p>
@@ -277,8 +278,9 @@
                                           img/content/magazine-preview-001.webp,
                                           img/content/magazine-preview-001@2x.webp 2x
                             ">
-                            <img src="img/content/magazine-preview-001.jpg" srcset="img/content/magazine-preview-001@2x.jpg 2x" width="287"
-                              height="403" alt="Обложка журнала Георесурсы Т 21. №1. 2021">
+                            <img src="img/content/magazine-preview-001.jpg"
+                              srcset="img/content/magazine-preview-001@2x.jpg 2x" width="287" height="403"
+                              alt="Обложка журнала Георесурсы Т 21. №1. 2021">
                           </picture>
                         </div>
                         <p class="slide__text slide__text--release">Т 21. №2. 2021</p>
@@ -294,8 +296,9 @@
                                           img/content/magazine-preview-003.webp,
                                           img/content/magazine-preview-003@2x.webp 2x
                             ">
-                            <img src="img/content/magazine-preview-003.jpg" srcset="img/content/magazine-preview-003@2x.jpg 2x" width="287"
-                              height="403" alt="Обложка журнала Георесурсы Т 21. №1. 2021">
+                            <img src="img/content/magazine-preview-003.jpg"
+                              srcset="img/content/magazine-preview-003@2x.jpg 2x" width="287" height="403"
+                              alt="Обложка журнала Георесурсы Т 21. №1. 2021">
                           </picture>
                         </div>
                         <p class="slide__text slide__text--release">Т 21. №3. 2021</p>
@@ -341,7 +344,8 @@
 
                   <li class="widget__logo-item">
                     <a href="#" class="widget__logo">
-                      <img src="img/content/logo-wos.svg" width="109" height="23" alt="Логотип Clarivate - Web of Science">
+                      <img src="img/content/logo-wos.svg" width="109" height="23"
+                        alt="Логотип Clarivate - Web of Science">
                     </a>
                   </li>
                   <!-- /.widget__logo-item -->
@@ -354,7 +358,8 @@
                   <!-- /.widget__logo-item -->
                 </ul>
                 <div class="widget__container">
-                  <a class="widget__georesursy" href="https://www.scimagojr.com/journalsearch.php?q=21100907383&amp;tip=sid&amp;exact=no"
+                  <a class="widget__georesursy"
+                    href="https://www.scimagojr.com/journalsearch.php?q=21100907383&amp;tip=sid&amp;exact=no"
                     title="SCImago Journal &amp; Country Rank"><img border="0"
                       src="https://www.scimagojr.com/journal_img.php?id=21100907383"
                       alt="SCImago Journal &amp; Country Rank" />
@@ -389,15 +394,18 @@
                                         img/content/article-preview-001.webp,
                                         img/content/article-preview-001@2x.webp 2x
                           ">
-                          <img src="img/content/article-preview-001.jpg" srcset="img/content/article-preview-001@2x.jpg 2x" width="561" height="321"
+                          <img src="img/content/article-preview-001.jpg"
+                            srcset="img/content/article-preview-001@2x.jpg 2x" width="561" height="321"
                             alt="Превью статьи">
                         </picture>
                       </div>
                       <div class="article__date-container">
                         <p class="article__date">15<br><span>апр</span></p>
                       </div>
-                      <h3 class="article__title">Российский Нефтегазохимический Форум и&nbsp;выставка «Газ. Нефть. Технологии»</h3>
-                      <p class="article__authors">А. Н. Ивойлов, К. Н. Кадеева, К. В. Константинопольский, Б. Р. Гуреев</p>
+                      <a href="#" class="article__title">Российский Нефтегазохимический Форум и&nbsp;выставка «Газ.
+                        Нефть. Технологии»</a>
+                      <p class="article__authors">А. Н. Ивойлов, К. Н. Кадеева, К. В. Константинопольский, Б. Р. Гуреев
+                      </p>
                     </li>
                     <!-- /.articles__item article -->
 
@@ -408,14 +416,16 @@
                                         img/content/article-preview-002.webp,
                                         img/content/article-preview-002@2x.webp 2x
                           ">
-                          <img src="img/content/article-preview-002.jpg" srcset="img/content/article-preview-002@2x.jpg 2x" width="561"
-                            height="321" alt="Превью статьи">
+                          <img src="img/content/article-preview-002.jpg"
+                            srcset="img/content/article-preview-002@2x.jpg 2x" width="561" height="321"
+                            alt="Превью статьи">
                         </picture>
                       </div>
                       <div class="article__date-container">
                         <p class="article__date">15<br><span>апр</span></p>
                       </div>
-                      <h3 class="article__title">Российский Нефтегазохимический Форум и выставка «Газ. Нефть. Технологии»</h3>
+                      <a href="#" class="article__title">Российский Нефтегазохимический Форум и выставка «Газ. Нефть.
+                        Технологии»</a>
                     </li>
                     <!-- /.articles__item article -->
 
@@ -426,14 +436,15 @@
                                         img/content/article-preview-003.webp,
                                         img/content/article-preview-003@2x.webp 2x
                           ">
-                          <img src="img/content/article-preview-003.jpg" srcset="img/content/article-preview-003@2x.jpg 2x" width="561"
-                            height="321" alt="Превью статьи">
+                          <img src="img/content/article-preview-003.jpg"
+                            srcset="img/content/article-preview-003@2x.jpg 2x" width="561" height="321"
+                            alt="Превью статьи">
                         </picture>
                       </div>
                       <div class="article__date-container">
                         <p class="article__date">15<br><span>апр</span></p>
                       </div>
-                      <h3 class="article__title">Российский Нефтегазохимический Форум и выставка</h3>
+                      <a href="#" class="article__title">Российский Нефтегазохимический Форум и выставка</a>
                     </li>
                     <!-- /.articles__item article -->
 
@@ -445,6 +456,131 @@
                 <!-- /.articles__list-container -->
 
                 <div class="articles__widget widget">
+                  <ul class="widget__logo-list">
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-open-access.svg" width="95" height="39" alt="Логотип Open Access">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-doaj.png" width="95" height="28" alt="Логотип DOAJ">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-wos.svg" width="109" height="23"
+                          alt="Логотип Clarivate - Web of Science">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+
+                    <li class="widget__logo-item">
+                      <a href="#" class="widget__logo">
+                        <img src="img/content/logo-scopus.svg" width="78" height="25" alt="Логотип Scopus">
+                      </a>
+                    </li>
+                    <!-- /.widget__logo-item -->
+                  </ul>
+                  <div class="widget__container">
+                    <a class="widget__georesursy"
+                      href="https://www.scimagojr.com/journalsearch.php?q=21100907383&amp;tip=sid&amp;exact=no"
+                      title="SCImago Journal &amp; Country Rank"><img border="0"
+                        src="https://www.scimagojr.com/journal_img.php?id=21100907383"
+                        alt="SCImago Journal &amp; Country Rank" />
+                    </a>
+                  </div>
+                  <a href="#" class="widget__btn btn btn--border btn--arrow btn--nowrap btn-reset">
+                    <span>Отправить рукопись</span>
+                    <svg width="17" height="8">
+                      <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
+                    </svg>
+                  </a>
+                </div>
+                <!-- /.promo__widget widget -->
+
+              </div>
+            </div>
+          </section>
+          <!-- /.main-page__articles articles -->
+
+          <section class="main-page__about about">
+            <div class="about__container container">
+              <div class="about__wrapper">
+
+                <div class="about__text-container">
+                  <h2 class="about__title title">О журнале</h2>
+                  <p class="about__text">Журнал георесурсы — рецензируемое ежеквартальное научно-техническое издание,
+                    отвечающее международным стандартам. Журнал издается с 1999 года. Рецензируемое ежеквартальное
+                    научно-техническое издание, отвечающее международным стандартам.</p>
+                  <a href="#" class="about__btn btn btn--border btn--arrow btn-reset">
+                    <span>Подробнее о журнале</span>
+                    <div class="about__item-image-container">
+                      <svg width="17" height="8">
+                        <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
+                      </svg>
+                    </div>
+                  </a>
+                </div>
+                <!-- /.about__text-container -->
+
+                <div class="about__list-container">
+                  <ul class="about__list">
+
+                    <li class="about__item">
+                      <div class="about__item-image-container">
+                        <svg width="32" height="32">
+                          <use xlink:href="img/sprite.svg#icon-unlocked"></use>
+                        </svg>
+                      </div>
+                      <h3 class="about__item-title">Open Access</h3>
+                      <p class="about__item-text">Георесурсы - журнал открытого доступа</p>
+                    </li>
+                    <!-- /.about__item -->
+
+                    <li class="about__item">
+                      <div class="about__item-image-container">
+                        <svg width="30" height="30">
+                          <use xlink:href="img/sprite.svg#icon-phone"></use>
+                        </svg>
+                      </div>
+                      <h3 class="about__item-title">Плата за публикацию</h3>
+                      <p class="about__item-text">Статьи публикуются бесплатно</p>
+                    </li>
+                    <!-- /.about__item -->
+
+                    <li class="about__item">
+                      <div class="about__item-image-container">
+                        <svg width="30" height="30">
+                          <use xlink:href="img/sprite.svg#icon-phone"></use>
+                        </svg>
+                      </div>
+                      <h3 class="about__item-title">Периодичность</h3>
+                      <p class="about__item-text">Журнал издается ежеквартально</p>
+                    </li>
+                    <!-- /.about__item -->
+
+                    <li class="about__item">
+                      <div class="about__item-image-container">
+                        <svg width="26" height="25">
+                          <use xlink:href="img/sprite.svg#icon-planet"></use>
+                        </svg>
+                      </div>
+                      <h3 class="about__item-title">История</h3>
+                      <p class="about__item-text">Журнал издается с 1999 года</p>
+                    </li>
+                    <!-- /.about__item -->
+
+                  </ul>
+                </div>
+                <!-- /.about__list-container -->
+
+                <div class="about__widget widget">
                   <ul class="widget__logo-list">
 
                     <li class="widget__logo-item">
@@ -475,6 +611,7 @@
                     </li>
                     <!-- /.widget__logo-item -->
                   </ul>
+
                   <div class="widget__container">
                     <a class="widget__georesursy"
                       href="https://www.scimagojr.com/journalsearch.php?q=21100907383&amp;tip=sid&amp;exact=no"
@@ -482,6 +619,8 @@
                         src="https://www.scimagojr.com/journal_img.php?id=21100907383" alt="SCImago Journal &amp; Country Rank" />
                     </a>
                   </div>
+                  <!-- /.widget__container -->
+
                   <a href="#" class="widget__btn btn btn--border btn--arrow btn--nowrap btn-reset">
                     <span>Отправить рукопись</span>
                     <svg width="17" height="8">
@@ -489,13 +628,14 @@
                     </svg>
                   </a>
                 </div>
-                <!-- /.promo__widget widget -->
+                <!-- /.about__widget widget -->
 
               </div>
+              <!-- /.about__wrapper -->
             </div>
+            <!-- /.about__container container -->
           </section>
-          <!-- /.main-page__articles articles -->
-
+          <!-- /.main-page__about about -->
         </div>
       </div>
     </main>
