--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <title>New project</title>
+  <title>Георесурсы</title>
   <link rel="stylesheet" href="css/style.min.css">
   <style>
     .mt180 {
@@ -78,6 +78,9 @@
           </li>
           <li>
             <a href="archive.html" class="btn link">Архив</a>
+          </li>
+          <li>
+            <a href="magazine-page.html" class="btn link">Страница журнала</a>
           </li>
         </ul>
       </div>
