--- a/source/index.html
+++ b/source/index.html
@@ -88,6 +88,9 @@
           <li>
             <a href="article-page.html" class="btn link">Страница статьи</a>
           </li>
+          <li>
+            <a href="editors.html" class="btn link">Редакционная коллегия</a>
+          </li>
         </ul>
       </div>
     </main>
