--- a/source/index.html
+++ b/source/index.html
@@ -34,6 +34,11 @@
     .link:focus {
       text-decoration: underline;
     }
+    @media (max-width: 768px) {
+      .mt180 {
+        margin-top: 100px;
+      }
+    }
   </style>
 </head>
 
@@ -96,6 +101,9 @@
           </li>
           <li>
             <a href="news-page.html" class="btn link">Страница "Новости"</a>
+          </li>
+          <li>
+            <a href="contacts.html" class="btn link">Страница "Контакты"</a>
           </li>
         </ul>
       </div>
