Добавляет 1 вариант страницы журнала

--- a/source/main.html
+++ b/source/main.html
@@ -308,20 +308,22 @@
 
                   </ul>
 
-                  <div class="promo__slider-btn-group">
-                    <button class="promo__slider-btn-prev btn-reset">
-                      <svg width="35" height="9">
-                        <use xlink:href="img/sprite.svg#icon-arrow-left-long"></use>
-                      </svg>
-                    </button>
-                    <button class="promo__slider-btn-next btn-reset">
-                      <svg width="35" height="9">
-                        <use xlink:href="img/sprite.svg#icon-arrow-right-long"></use>
-                      </svg>
-                    </button>
-                  </div>
-
                 </div>
+
+                <div class="promo__slider-btn-group">
+                  <button class="promo__slider-btn-prev btn-reset">
+                    <svg width="35" height="9">
+                      <use xlink:href="img/sprite.svg#icon-arrow-left-long"></use>
+                    </svg>
+                  </button>
+                  <button class="promo__slider-btn-next btn-reset">
+                    <svg width="35" height="9">
+                      <use xlink:href="img/sprite.svg#icon-arrow-right-long"></use>
+                    </svg>
+                  </button>
+                </div>
+                <!-- /.promo__slider-btn-group -->
+
               </div>
               <!-- /.promo__slider -->
 
