--- a/source/index.html
+++ b/source/index.html
@@ -108,6 +108,12 @@
           <li>
             <a href="magazine-view-001.html" class="btn link">Страница журнала 1 вариант</a>
           </li>
+          <li>
+            <a href="magazine-view-002.html" class="btn link">Страница журнала 2 вариант</a>
+          </li>
+          <li>
+            <a href="magazine-view-003.html" class="btn link">Страница журнала 3 вариант</a>
+          </li>
         </ul>
       </div>
     </main>
