--- a/source/magazine-view-003.html
+++ b/source/magazine-view-003.html
@@ -177,7 +177,7 @@
       <div class="magazine-view__container container">
         <div class="magazine-view__wrapper">
 
-          <div class="magazine-view__title-container">
+          <div class="magazine-view__title-container magazine-view__title-container--pr80">
             <div class="magazine-view__breadcrumbs breadcrumbs">
               <a href="main.html">Георесурсы /</a>
             </div>
@@ -188,15 +188,8 @@
           <div class="magazine-view__content-container">
             <div class="magazine-view__content">
 
-              <div class="magazine-view__main-image-container">
-                <picture>
-                  <source type="image/webp" srcset="
-                                img/content/magazine-image-big.webp,
-                                img/content/magazine-image-big@2x.webp 2x
-                  ">
-                  <img src="img/content/magazine-image-big.jpg" srcset="img/content/magazine-image-big@2x.jpg 2x"
-                    width="856" height="458" alt="Превью журнала">
-                </picture>
+              <div class="magazine-view__main-image-container magazine-view__main-image-container--no-image">
+
                 <div class="magazine-view__date">
                   <p>
                     <span>17</span>
@@ -266,8 +259,8 @@
                                   img/content/magazine-image-002.webp,
                                   img/content/magazine-image-002@2x.webp 2x
                     ">
-                    <img src="img/content/magazine-image-002.jpg" srcset="img/content/magazine-image-002@2x.jpg 2x" width="180"
-                      height="196" alt="Картинка из журнала">
+                    <img src="img/content/magazine-image-002.jpg" srcset="img/content/magazine-image-002@2x.jpg 2x"
+                      width="180" height="196" alt="Картинка из журнала">
                   </picture>
                 </div>
               </div>
@@ -278,55 +271,6 @@
 
             </div>
             <!-- /.magazine-view__content -->
-
-            <div class="magazine-view__widget widget">
-              <ul class="widget__logo-list">
-
-                <li class="widget__logo-item">
-                  <a href="#" class="widget__logo">
-                    <img src="img/content/logo-open-access.svg" width="95" height="39" alt="Логотип Open Access">
-                  </a>
-                </li>
-                <!-- /.widget__logo-item -->
-
-                <li class="widget__logo-item">
-                  <a href="#" class="widget__logo">
-                    <img src="img/content/logo-doaj.png" width="95" height="28" alt="Логотип DOAJ">
-                  </a>
-                </li>
-                <!-- /.widget__logo-item -->
-
-                <li class="widget__logo-item">
-                  <a href="#" class="widget__logo">
-                    <img src="img/content/logo-wos.svg" width="109" height="23"
-                      alt="Логотип Clarivate - Web of Science">
-                  </a>
-                </li>
-                <!-- /.widget__logo-item -->
-
-                <li class="widget__logo-item">
-                  <a href="#" class="widget__logo">
-                    <img src="img/content/logo-scopus.svg" width="78" height="25" alt="Логотип Scopus">
-                  </a>
-                </li>
-                <!-- /.widget__logo-item -->
-              </ul>
-              <div class="widget__container">
-                <a class="widget__georesursy"
-                  href="https://www.scimagojr.com/journalsearch.php?q=21100907383&amp;tip=sid&amp;exact=no"
-                  title="SCImago Journal &amp; Country Rank"><img border="0"
-                    src="https://www.scimagojr.com/journal_img.php?id=21100907383"
-                    alt="SCImago Journal &amp; Country Rank" />
-                </a>
-              </div>
-              <a href="#" class="widget__btn btn btn--border btn--arrow btn--nowrap btn-reset">
-                <span>Отправить рукопись</span>
-                <svg width="17" height="8">
-                  <use xlink:href="img/sprite.svg#icon-arrow-right"></use>
-                </svg>
-              </a>
-            </div>
-            <!-- /.magazine-view__widget widget -->
 
           </div>
           <!-- /.magazine-view__content-container -->
@@ -343,8 +287,8 @@
                                     img/content/article-preview-002.webp,
                                     img/content/article-preview-002@2x.webp 2x
                       ">
-                      <img src="img/content/article-preview-002.jpg" srcset="img/content/article-preview-002@2x.jpg 2x" width="259"
-                        height="140" alt="Превью статьи">
+                      <img src="img/content/article-preview-002.jpg" srcset="img/content/article-preview-002@2x.jpg 2x"
+                        width="259" height="140" alt="Превью статьи">
                     </picture>
                   </div>
                   <a href="#" class="article__title">Российский Нефтегазохимический Форум и выставка «Газ. Нефть.
@@ -359,8 +303,8 @@
                                     img/content/article-preview-003.webp,
                                     img/content/article-preview-003@2x.webp 2x
                       ">
-                      <img src="img/content/article-preview-003.jpg" srcset="img/content/article-preview-003@2x.jpg 2x" width="259"
-                        height="140" alt="Превью статьи">
+                      <img src="img/content/article-preview-003.jpg" srcset="img/content/article-preview-003@2x.jpg 2x"
+                        width="259" height="140" alt="Превью статьи">
                     </picture>
                   </div>
                   <a href="#" class="article__title">Российский Нефтегазохимический Форум и выставка «Газ. Нефть.
@@ -375,8 +319,8 @@
                                     img/content/news-preview-003.webp,
                                     img/content/news-preview-003@2x.webp 2x
                       ">
-                      <img src="img/content/news-preview-003.jpg" srcset="img/content/news-preview-003@2x.jpg 2x" width="259"
-                        height="140" alt="Превью статьи">
+                      <img src="img/content/news-preview-003.jpg" srcset="img/content/news-preview-003@2x.jpg 2x"
+                        width="259" height="140" alt="Превью статьи">
                     </picture>
                   </div>
                   <a href="#" class="article__title">Российский Нефтегазохимический Форум и выставка «Газ. Нефть.
@@ -391,8 +335,8 @@
                                     img/content/article-preview-002.webp,
                                     img/content/article-preview-002@2x.webp 2x
                       ">
-                      <img src="img/content/article-preview-002.jpg" srcset="img/content/article-preview-002@2x.jpg 2x" width="259"
-                        height="140" alt="Превью статьи">
+                      <img src="img/content/article-preview-002.jpg" srcset="img/content/article-preview-002@2x.jpg 2x"
+                        width="259" height="140" alt="Превью статьи">
                     </picture>
                   </div>
                   <a href="#" class="article__title">Российский Нефтегазохимический Форум и выставка «Газ. Нефть.
