--- a/source/authors.html
+++ b/source/authors.html
@@ -184,15 +184,15 @@
               <h2 class="authors__title title">Авторам</h2>
             </div>
             <div class="authors__btn-group">
-              <a href="#" class="authors__btn btn btn--border btn-reset">Порядок публикации</a>
-              <a href="#" class="authors__btn btn btn--border btn-reset">Правила оформления</a>
+              <a href="#publication" class="authors__btn btn btn--border btn-reset">Порядок публикации</a>
+              <a href="#registration" class="authors__btn btn btn--border btn-reset">Правила оформления</a>
             </div>
           </div>
           <!-- /.authors__top-line -->
 
           <div class="authors__content">
 
-            <h2 class="authors__text-title">Порядок публикации статей</h2>
+            <h2 class="authors__text-title" id="publication">Порядок публикации статей</h2>
 
             <div class="authors__list-container">
               <ul class="authors__list authors__list--2-column">
@@ -333,7 +333,7 @@
             </div>
             <!-- /.authors__text-container -->
 
-            <h2 class="authors__text-title authors__text-title--topline">Правила оформления статей</h2>
+            <h2 class="authors__text-title authors__text-title--topline" id="registration">Правила оформления статей</h2>
 
             <div class="authors__text-container">
               <p class="authors__text">
@@ -400,7 +400,7 @@
             <!-- /.authors__list-container -->
 
             <div class="authors__text-container">
-              <h3 class="authors__text-title authors__text-title--low">Правила оформления статьи</h3>
+              <h3 class="authors__text-title authors__text-title--low" >Правила оформления статьи</h3>
               <p class="authors__text">Объем статьи не ограничен. Статья представляется в формате Microsoft Word, шрифт
                 – Times New Roman, размер – 14 пт., межстрочный интервал – одинарный, форматирование – по ширине; все
                 поля – по 20 мм. Текст, рисунки, таблицы и подписи к ним должны быть поданы как в самом варианте статьи,
