Вносит финальные правки, возможно

--- a/source/magazine-view-001.html
+++ b/source/magazine-view-001.html
@@ -23,9 +23,9 @@
               <a href="index.html" class="main-nav__logo">
                 <picture>
                   <source type="image/webp" srcset="
-                                img/content/logo-georesursy.webp,
-                                img/content/logo-georesursy@2x.webp 2x
-                  ">
+                                    img/content/logo-georesursy.webp,
+                                    img/content/logo-georesursy@2x.webp 2x
+                      ">
                   <img src="img/content/logo-georesursy.png" srcset="img/content/logo-georesursy@2x.png 2x" width="69"
                     height="61" alt="Логотип Георесурсы">
                 </picture>
@@ -99,6 +99,12 @@
                 </li>
                 <li class="main-nav__link-item">
                   <a href="#" class="main-nav__link hover-line">Контакты</a>
+                </li>
+                <li class="main-nav__link-item main-nav__link-item--only-mobile mt40">
+                  <a href="#" class="main-nav__link hover-line" data-modal="login">Личный кабинет</a>
+                </li>
+                <li class="main-nav__link-item main-nav__link-item--only-mobile">
+                  <a href="#" class="main-nav__link hover-line">Отправить рукопись</a>
                 </li>
               </ul>
               <button class="main-nav__close-menu btn-reset">
@@ -380,9 +386,9 @@
           <a href="index.html" class="footer__logo">
             <picture>
               <source type="image/webp" srcset="
-                            img/content/logo-georesursy.webp,
-                            img/content/logo-georesursy@2x.webp 2x
-              ">
+                                img/content/logo-georesursy.webp,
+                                img/content/logo-georesursy@2x.webp 2x
+                  ">
               <img src="img/content/logo-georesursy.png" srcset="img/content/logo-georesursy@2x.png 2x" width="69"
                 height="61" alt="Логотип Георесурсы">
             </picture>
@@ -425,11 +431,20 @@
           </ul>
         </div>
         <div class="footer__inputs">
-          <button class="footer__search-btn btn-reset" data-modal="search">
-            <svg width="20" height="20">
-              <use xlink:href="img/sprite.svg#icon-search-2"></use>
-            </svg>
-          </button>
+          <div class="footer__inputs-line">
+            <button class="footer__search-btn btn-reset" data-modal="search">
+              <svg width="20" height="20">
+                <use xlink:href="img/sprite.svg#icon-search-2"></use>
+              </svg>
+            </button>
+            <div class="footer__social">
+              <a href="#" class="footer__social-link">
+                <svg width="30" height="30">
+                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
           <div class="footer__change-lang">
             <div class="footer__input-box">
               <input class="footer__radio-input visually-hidden" type="radio" name="lang-footer" id="lang-rus-footer"
