--- a/source/article-page.html
+++ b/source/article-page.html
@@ -21,14 +21,7 @@
 
             <li class="main-nav__item main-nav__item--logo">
               <a href="index.html" class="main-nav__logo">
-                <picture>
-                  <source type="image/webp" srcset="
-                                    img/content/logo-georesursy.webp,
-                                    img/content/logo-georesursy@2x.webp 2x
-                      ">
-                  <img src="img/content/logo-georesursy.png" srcset="img/content/logo-georesursy@2x.png 2x" width="69"
-                    height="61" alt="Логотип Георесурсы">
-                </picture>
+                <img src="img/content/logo-georesursy.png" width="69" height="61" alt="Логотип Георесурсы">
               </a>
               <div class="main-nav__text-container">
                 <h1 class="main-nav__title">Георесурсы</h1>
@@ -156,7 +149,7 @@
                 </a>
               </div>
               <div class="main-nav__link-container">
-                <a href="#" class="main-nav__link">
+                <a href="#" class="main-nav__link" data-modal="login">
                   <svg width="18" height="17">
                     <use xlink:href="img/sprite.svg#icon-add-manuscript"></use>
                   </svg>
@@ -433,8 +426,8 @@
               <div class="article-page__content-item">
                 <h3 class="article-page__subtitle">Список литературы</h3>
                 <div class="article-page__text">
-                  <p>Маргулис Л.С. (2009). <span class="bold">Нефтегеологическое районирование и оценка нефтегазовых
-                      ресурсов Дальневосточных морей. Нефтегазовая геология. Теория и практика.</span>
+                  <p>Маргулис Л.С. (2009). Нефтегеологическое районирование и оценка нефтегазовых
+                      ресурсов Дальневосточных морей. Нефтегазовая геология. Теория и практика.
                     <br>
                     <a class="hover-line color-decoration"
                       href="http://www.ngtp.ru/rub/5/23_2009.pdf">http://www.ngtp.ru/rub/5/23_2009.pdf</a>
@@ -442,78 +435,15 @@
                 </div>
 
                 <div class="article-page__text">
-                  <p>Савицкий А.В. (2005). <span class="bold">Оценка перспектив нефтегазоносности шельфа Северного
-                      Сахалина на основе бассейнового моделирования.</span> Дис. канд. геол.-мин. наук. Москва, 143 с.
+                  <p>Савицкий А.В. (2005). Оценка перспектив нефтегазоносности шельфа Северного
+                      Сахалина на основе бассейнового моделирования. Дис. канд. геол.-мин. наук. Москва, 143 с.
                   </p>
                 </div>
                 <div class="article-page__text">
-                  <p>Ступакова А.В., Бурлин Ю.К. (2009). <span class="bold">История формирования осадочно-породных
-                      бассейнов шельфа российской Арктики. Тектоническое совещание РАН. Москва.</span>
+                  <p>Ступакова А.В., Бурлин Ю.К. (2009). История формирования осадочно-породных
+                      бассейнов шельфа российской Арктики. Тектоническое совещание РАН. Москва.
                   </p>
                 </div>
-              </div>
-              <!-- /.article-page__content-item -->
-
-              <div class="article-page__content-item">
-                <h3 class="article-page__subtitle">Список литературы</h3>
-                <ul class="article-page__list">
-
-                  <li class="article-page__item article-page__item--border-top">
-                    <span class="article-page__item-number">01</span>
-                    <p class="article-page__item-text">Маргулис Л.С. (2009). Нефтегеологическое районирование и оценка
-                      нефтегазовых ресурсов Дальневосточных морей. Нефтегазовая геология. Теория и практика.
-                      <br><a class="hover-line color-decoration"
-                        href="http://www.ngtp.ru/rub/5/23_2009.pdf">http://www.ngtp.ru/rub/5/23_2009.pdf</a>
-                    </p>
-                  </li>
-                  <!-- /.article-page__item -->
-
-                  <li class="article-page__item article-page__item--border-top">
-                    <span class="article-page__item-number">02</span>
-                    <p class="article-page__item-text">Савицкий А.В. (2005). Оценка перспектив нефтегазоносности шельфа
-                      Северного Сахалина на основе бассейнового моделирования. Дис. канд. геол.-мин. наук. Москва, 143
-                      с.</p>
-                  </li>
-                  <!-- /.article-page__item -->
-
-                  <li class="article-page__item article-page__item--border-top">
-                    <span class="article-page__item-number">03</span>
-                    <p class="article-page__item-text">Ступакова А.В., Бурлин Ю.К. (2009). История формирования
-                      осадочно-породных бассейнов шельфа российской Арктики. Тектоническое совещание РАН. Москва.</p>
-                  </li>
-                  <!-- /.article-page__item -->
-
-                </ul>
-              </div>
-              <!-- /.article-page__content-item -->
-
-              <div class="article-page__content-item">
-                <h3 class="article-page__subtitle">Список литературы</h3>
-                <ul class="article-page__list">
-
-                  <li class="article-page__item article-page__item--border-top">
-                    <p class="article-page__item-text">Маргулис Л.С. (2009). Нефтегеологическое районирование и оценка
-                      нефтегазовых ресурсов Дальневосточных морей. Нефтегазовая геология. Теория и практика.
-                      <br><a class="hover-line color-decoration"
-                        href="http://www.ngtp.ru/rub/5/23_2009.pdf">http://www.ngtp.ru/rub/5/23_2009.pdf</a>
-                    </p>
-                  </li>
-                  <!-- /.article-page__item -->
-
-                  <li class="article-page__item article-page__item--border-top">
-                    <p class="article-page__item-text">Савицкий А.В. (2005). Оценка перспектив нефтегазоносности шельфа
-                      Северного Сахалина на основе бассейнового моделирования. Дис. канд. геол.-мин. наук. Москва, 143
-                      с.</p>
-                  </li>
-                  <!-- /.article-page__item -->
-
-                  <li class="article-page__item article-page__item--border-top">
-                    <p class="article-page__item-text">Ступакова А.В., Бурлин Ю.К. (2009). История формирования
-                      осадочно-породных бассейнов шельфа российской Арктики. Тектоническое совещание РАН. Москва.</p>
-                  </li>
-                  <!-- /.article-page__item -->
-
-                </ul>
               </div>
               <!-- /.article-page__content-item -->
 
