Меняет логотип в футере

--- a/source/main.html
+++ b/source/main.html
@@ -843,14 +843,7 @@
       <div class="footer__container container">
         <div class="footer__logo-container">
           <a href="index.html" class="footer__logo">
-            <picture>
-              <source type="image/webp" srcset="
-                            img/content/logo-georesursy.webp,
-                            img/content/logo-georesursy@2x.webp 2x
-              ">
-              <img src="img/content/logo-georesursy.png" srcset="img/content/logo-georesursy@2x.png 2x" width="69"
-                height="61" alt="Логотип Георесурсы">
-            </picture>
+            <img src="img/content/logo-georesursy.png" width="69" height="61" alt="Логотип Георесурсы">
           </a>
           <div class="footer__text-container">
             <h3 class="footer__title">Георесурсы</h3>
